# faker-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GENERATORS.md  README.md  SECURITY.md
docs/: CLI.md  README.md
docs/blockchain/: aeternity.md  bitcoin.md  ethereum.md  tezos.md
docs/books/: book.md  culture_series.md  dune.md  lovecraft.md  the_kingkiller_chronicle.md
docs/creature/: animal.md  bird.md  cat.md  dog.md  horse.md
docs/default/: address.md  adjective.md  alphanumeric.md  ancient.md  app.md  appliance.md  artist.md  avatar.md  bank.md  barcode.md  beer.md  blood.md  boolean.md  business.md  camera.md  cannabis.md  chile_rut.md  chuck_norris.md  code.md  coffee.md  coin.md  color.md  commerce.md  company.md  compass.md  computer.md  construction.md  cosmere.md  crypto.md  crypto_coin.md  currency.md  date.md  dc_comics.md  demographic.md  dessert.md  device.md  driving_licence.md  educator.md  electrical_components.md  emotion.md  (+60 more)
docs/drone/: drone.md
docs/fantasy/: tolkien.md
docs/games/: clash_of_clans.md  dnd.md  dota.md  elder_scrolls.md  fallout.md  final_fantasy_xiv.md  (+18 more)
examples/: advanced_features.rs  basic_usage.rs  books_creatures.rs  business_finance.rs  cli_demo.rs  debug_city.rs  debug_locale.rs  eccentric_data.rs  education_science.rs  entertainment.rs  entertainment_fixed.rs  fantasy_rpg.rs  it_security.rs  japanese_media.rs  regional_data.rs  social_media.rs  sports_blockchain.rs  sports_events.rs  tech_programming.rs  test.rs  travel_misc.rs
src/: address.rs  base.rs  book.rs  company.rs  config.rs  device.rs  educator.rs  error.rs  internet.rs  job.rs  lib.rs  locale.rs  main.rs  main.rs.bak  military.rs  movie.rs  music.rs  name.rs  university.rs  vehicle.rs
(+338 files in other folders)
