[package]
name = "faker-rust"
version = "0.1.0"
edition = "2024"
authors = ["Faker Rust Team"]

[lib]
name = "faker"
path = "src/lib.rs"

[package.metadata.i18n]
available-locales = ["en"]
default-locale = "en"
load-path = "locales"

[dependencies]
rand = "0.8"
once_cell = "1.19"
rust-i18n = "3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"