[package]
name = "faker-rust"
version = "0.1.0"
edition = "2024"
authors = ["Faker Rust Team <team@faker-rust.dev>"]
description = "A high-performance, locale-aware fake data generator for Rust"
license = "MIT"
repository = "https://github.com/faker-rust/faker-rust"
homepage = "https://github.com/faker-rust/faker-rust"
documentation = "https://docs.rs/faker-rust"
readme = "README.md"
keywords = ["faker", "fake", "data", "generator", "testing"]
categories = ["development-tools::testing", "text-processing"]
rust-version = "1.85"

[package.metadata.i18n]
available-locales = ["en"]
default-locale = "en"
load-path = "locales"

[dependencies]
rand = "0.8"
once_cell = "1.19"
rust-i18n = "3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "faker-rust"
path = "src/bin/faker_rust.rs"

[dev-dependencies]